2006-03-18 nowel

================ S2Dao.PHP5-1.0.0-beta4 更新履歴 ===================
    * S2ActiveRecordを提供開始しました。(alpha)
    * 埋め込み変数コメントでのプロパティ参照に対応しました。
    * /src/examples を /examples に移動しました。
    * fix: IDアノテーション使用時のバグを修正しました。
    * fix: SQLコメントが正しく利用できないバグを修正しました。

2006-03-17 nowel

    * 埋め込み変数コメントに対応しました。SQLコメント内で以下のコメントが利用可能です。
        - /*Entity名.プロパティ名*/
        - /*引数名.プロパティ名*/
    * SQLコメントが正しく動作しないバグを修正しました。

2006-03-05 nowel

    * S2ActiveRecord を作成しました。
    * /src/examples を /examples に移動しました。
    
2006-02-20 nowel

    * ID アノテーション使用時に identity の指定ができなくなっているのを修正しました。

2006-01-31 nowel 

================ S2Dao.PHP5-1.0.0-beta3 更新履歴 ===================
    * DBMS の対応が増えました。現在対応しているDBMSは以下です。
        - MySql
        - PostgreSQL
        - SQLite
        - Oracle
    * ID アノテーションに対応しました。
    * COLUMN アノテーションに対応しました。
    * RELNO アノテーションに対応しました。
    * RELKEYS アノテーションに対応しました。
    * ARGS アノテーションを使用しなくても、メソッドの引数名を取得できるようになりました。
    * S2Dao(Java) の version 1.0.29 とほぼ同等になりました。
    * SQL 文にて SELECT COUNT(*) FROM EMP などのように、単一の数値を返す場合の処理を変更しました。
      SELECT のすぐ後ろに COUNT, MAX, MIN が来た場合は結果セットをそのまま返却します。
    * fix: Array_, find メソッド使用時の不具合を修正しました。
    * fix: PEAR::DB の情報が残っており正しく動作しない不具合を修正しました。
    * fix: 型の判定を修正しました。
    * fix: findObject 使用時に stdClass が戻されるのを修正しました。

2006-01-22 nowel

    * src/phing/task/* 及び build.xml は S2Container.PHP5 のプロジェクトに移行しました。
        phar パッケージ及び pear パッケージ作成の際は S2Container.PHP5 から行ってください。
    * src/example/s2dao_orign に S2Dao(java) の Exapme を作成しました。

2006-01-15 nowel

    * N:1 マッピングに対応しました。
        RELNO アノテーション, RELKEYS アノテーションに対応しました。
    * ARGS アノテーションが指定されない場合に、メソッドの引数名を使用するように変更しました。
        - JAVA では メソッドの引数名に対してリフレクションできませんでしたが、PHP5.1.x では
        　可能であるため、対応させました。
          現段階では、メソッドの初期値に null が設定されている場合には設定しません。

        ex)
            method_SQL = "select * from hoge where foo = /*id*/ and bar = /*bar*/
            public function method($id, $bar);

2006-01-13 nowel

    * S2Dao_PropertyTypeImpl を修正しました。