@@ -1,5 +1,4 @@
-SELECT *
-FROM CD
+SELECT * FROM CD
 /*BEGIN*/WHERE
     /*IF id != null*/ ID = /*id*/'1'/*END*/
     /*IF title != null*/ AND TITLE = /*title*/'bohemian rhapsody'/*END*/
