@@ -2,5 +2,5 @@ SELECT *
 FROM CD
 WHERE
 /*IF id != null*/ ID = /*id*/'1'
-    -- ELSE ID = 1
+--ELSE ID = 1
 /*END*/
