@@ -1,3 +1,8 @@
+2006-03-21 nowel
+
+    * refix: SQLコメントが正しく利用できないバグを修正しました。
+    * add: Dao, Entity の自動生成タスクを作成しました。(alpha)
+
 2006-03-18 nowel
 
 ================ S2Dao.PHP5-1.0.0-beta4 更新履歴 ===================
